# Desafio-2

desafio2/: CMakeLists.txt  InicializarDatos.h  Partido.h  cargarArchivos.cpp  cargarArchivos.h  eliminatoria.cpp  eliminatoria.h  equipo.cpp  equipo.h  estadisticaequipo.cpp  estadisticaequipo.h  estadisticajugador.cpp  estadisticajugador.h  grupo.cpp  grupo.h  inicializarDatos.cpp  jugador.cpp  jugador.h  main.cpp  menu.cpp  menu.h  metricas.cpp  metricas.h  partido.cpp  partido.h  tablagrupo.cpp  tablagrupo.h  torneo.cpp  torneo.h
